Bug 137774 - Fix FTL Native Inlining for EFL
Summary: Fix FTL Native Inlining for EFL
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on: 145044
Blocks: 143605
  Show dependency treegraph
 
Reported: 2014-10-16 02:26 PDT by Dániel Bátyai
Modified: 2015-05-15 02:34 PDT (History)
14 users (show)

See Also:


Attachments
Patch (18.18 KB, patch)
2014-10-16 02:41 PDT, Dániel Bátyai
no flags Details | Formatted Diff | Diff
Patch (24.48 KB, patch)
2014-10-16 04:35 PDT, Dániel Bátyai
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dániel Bátyai 2014-10-16 02:26:57 PDT
Fix FTL Native Inlining for EFL
Comment 1 Dániel Bátyai 2014-10-16 02:41:29 PDT
Created attachment 239940 [details]
Patch

Initial WIP. 
Added required functionality and updated CMake to generate the required bitcode.
There is a small issue with the script generating InlineRuntmeSymbolTable.h, 
but overall the inlining is working correctly.
Comment 2 Dániel Bátyai 2014-10-16 04:35:48 PDT
Created attachment 239943 [details]
Patch

Added missing files
Comment 3 WebKit Commit Bot 2014-10-16 04:38:19 PDT
Attachment 239943 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/CMakeLists.txt:795:  There should be exactly one empty line instead of 0 between "inspector" and "inspector/agents".  [list/emptyline] [5]
ERROR: Source/JavaScriptCore/CMakeLists.txt:797:  Alphabetical sorting problem. "interpreter" should be before "inspector/remote".  [list/order] [5]
Total errors found: 2 in 17 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 4 Michael Saboff 2014-10-20 10:01:05 PDT
Comment on attachment 239943 [details]
Patch

r=me
Comment 5 WebKit Commit Bot 2014-10-21 03:18:12 PDT
Comment on attachment 239943 [details]
Patch

Clearing flags on attachment: 239943

Committed r174940: <http://trac.webkit.org/changeset/174940>
Comment 6 WebKit Commit Bot 2014-10-21 03:18:21 PDT
All reviewed patches have been landed.  Closing bug.
Comment 7 Ting-Wei Lan 2014-10-21 07:11:21 PDT
This patch causes compilation error on FreeBSD 10.1. program_invocation_name is a GNU extension, so it should not be used unconditionally.

Source/JavaScriptCore/runtime/BundlePath.cpp:41:42: error: use of undeclared identifier 'program_invocation_name'
        std::string programPath(realpath(program_invocation_name, 0));
                                         ^
1 error generated.
Comment 8 Tibor Mészáros 2014-10-21 08:47:05 PDT
(In reply to comment #7)
> This patch causes compilation error on FreeBSD 10.1. program_invocation_name
> is a GNU extension, so it should not be used unconditionally.
> 
> Source/JavaScriptCore/runtime/BundlePath.cpp:41:42: error: use of undeclared
> identifier 'program_invocation_name'
>         std::string programPath(realpath(program_invocation_name, 0));
>                                          ^
> 1 error generated.

Hi Ting-Wei Lan!

https://bugs.webkit.org/show_bug.cgi?id=137924 will fix this problem.